--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <meta property="og:title" content="Global City Team Challenge">
   <meta property="og:type" content="website">
   <meta property="og:url" content="/">
-  <meta property="og:image" content="img/GCTC_logo_344x80.png">
+  <meta property="og:image" content="img/pexels-photo-294560.jpeg">
   <meta property="og:description" content="The Global City Teams Challenge (GCTC) program is a collaborative platform for the development of smart cities and communities, led by National Institute of Standards and Technology, a bureau of U.S. Department of Commerce, in partnership with other U.S. federal agencies including U.S. Department of Homeland Security Science and Technology Directorate (DHS S&T), National Science Foundation, International Trade Administration, and National Telecommunications and Information Administration. ">
   
 	<style type="text/css">
