--- a/event/gctc-expo-2019/index.html
+++ b/event/gctc-expo-2019/index.html
@@ -24,10 +24,13 @@
   <link rel="alternate" href="https://pages.nist.gov/index.xml" type="application/rss+xml" title="Global City Team Challenge">
 
   
-  <meta property="og:title" content="exhibits" />
+  <meta property="og:title" content="Smart and Secure Cities and Communities Challenge Expo" />
+  <meta property="og:image" content="img/pexels-photo-294560.jpeg">
+  <meta property="og:description" content="In 2019, Global City Teams Challenge brings you the Smart and Secure Cities and Communities Challenge (GCTC-SC3) Expo, co-hosted by NIST and U.S. Department of Homeland Security Science and Technology Directorate (DHS S&T).">
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="/GCTC/event/gctc-kickoff-2018/exhibit//" />
-  <meta property="og:image" content="img/logo.png" />
+  <meta property="og:url" content="https://pages.nist.gov/GCTC/event/gctc-expo-2019/" />
+
+  
   
   <link href="../../css/jquery.dataTables.min.css" rel="stylesheet">
 <link href="../../css/jquery.dataTables.yadcf.css" rel="stylesheet">
