--- a/event/gctc-expo-2019/index.html
+++ b/event/gctc-expo-2019/index.html
@@ -25,8 +25,8 @@
 
   
   <meta property="og:title" content="Smart and Secure Cities and Communities Challenge Expo" />
-  <meta property="og:image" content="https://pages.nist.gov/GCTC/images/gctc-expo-2019/shutterstock_241335445.jpg">
-  <meta property="og:description" content="In 2019, Global City Teams Challenge brings you the Smart and Secure Cities and Communities Challenge (GCTC-SC3) Expo, co-hosted by NIST and U.S. Department of Homeland Security Science and Technology Directorate (DHS S&T).">
+  <meta property="og:image" content="https://pages.nist.gov/GCTC/images/gctc-expo-2019/shutterstock_241335445.jpg" />
+  <meta property="og:description" content="In 2019, Global City Teams Challenge brings you the Smart and Secure Cities and Communities Challenge (GCTC-SC3) Expo, co-hosted by NIST and U.S. Department of Homeland Security Science and Technology Directorate (DHS S&T)." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://pages.nist.gov/GCTC/event/gctc-expo-2019/" />
 
