--- a/event/gctc-expo-2019/index.html
+++ b/event/gctc-expo-2019/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>The Global City Teams Challenge Expo 2019</title>
+<title>The Global City Teams Challenge Smart and Secure Cities and Communities Challenge Expo 2019</title>
   <meta name="author" content="" />
   <meta name="keywords" content="">
 
