--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
   <link rel="alternate" href="https://pages.nist.gov/index.xml" type="application/rss+xml" title="Global City Team Challenge">
 
   
-  <meta property="og:title" content="Global City Teams Challenge">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="/">
-  <meta property="og:image" content="img/logo.png">
-  <meta property="og:description" content="The Global City Teams Challenge (GCTC) program is a collaborative platform for the development of smart cities and communities, led by National Institute of Standards and Technology, a bureau of U.S. Department of Commerce, in partnership with other U.S. federal agencies including U.S. Department of Homeland Security Science and Technology Directorate (DHS S&T), National Science Foundation, International Trade Administration, and National Telecommunications and Information Administration. ">
+  <meta property="og:title" content="Global City Teams Challenge" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="/" />
+  <meta property="og:image" content="img/logo.png" />
+  <meta property="og:description" content="The Global City Teams Challenge (GCTC) program is a collaborative platform for the development of smart cities and communities, led by National Institute of Standards and Technology, a bureau of U.S. Department of Commerce, in partnership with other U.S. federal agencies including U.S. Department of Homeland Security Science and Technology Directorate (DHS S&T), National Science Foundation, International Trade Administration, and National Telecommunications and Information Administration. " />
   
 	<style type="text/css">
 		.bar {padding:0 0 60px 0;}
