--- a/smart-regions/index.html
+++ b/smart-regions/index.html
@@ -7,7 +7,7 @@
   <meta name="googlebot" content="index,follow,snippet,archive">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Smart Regions Initiative - Global City Teams Challenge</title>
+  <title>Smart Regions - Global City Teams Challenge</title>
 
   <meta name="author" content="" />
   <meta name="keywords" content="">
@@ -193,7 +193,7 @@ button.placeholder:hover {border-color:#ddd;outline:none;}
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SuperClusters<span class="caret"></span></a>                    
 					<ul class="dropdown-menu">
 						<li><a href="/GCTC/super-clusters/">SuperClusters</a></li>
-						<li><a href="/GCTC/smart-regions/">Smart Regions Initiative</a></li>
+						<li><a href="/GCTC/smart-regions/">Smart Regions</a></li>
 					</ul>
 					
                     
