--- a/event/index.html
+++ b/event/index.html
@@ -92,7 +92,8 @@
                                     </ul>                    
                             </li>                  
                             <li class="dropdown">                    
-                                <a href="/GCTC/super-clusters/">SuperClusters</a>                    
+                                <li><a href="/GCTC/super-clusters/">SuperClusters</a></li>
+						<li><a href="/GCTC/smart-regions/">Smart Regions</a></li>                    
                             </li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Action Clusters <span class="caret"></span></a>                    
