update navigation to include smart regions

--- a/event/gctc-kickoff-2018/index.html
+++ b/event/gctc-kickoff-2018/index.html
@@ -144,8 +144,8 @@
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SuperClusters<span class="caret"></span></a>                    
 					<ul class="dropdown-menu">
-						<li><li><a href="/GCTC/super-clusters/">SuperClusters</a></li>
-						<li><a href="/GCTC/smart-regions/">Smart Regions</a></li></li>						
+						<li><a href="/GCTC/super-clusters/">SuperClusters</a></li>
+						<li><a href="/GCTC/smart-regions/">Smart Regions</a></li>						
 					</ul>
                   </li>
                   
