added partner logos to expo page; updated smart regions to include collaborative

--- a/smart-regions/index.html
+++ b/smart-regions/index.html
@@ -193,7 +193,7 @@ button.placeholder:hover {border-color:#ddd;outline:none;}
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SuperClusters<span class="caret"></span></a>                    
 					<ul class="dropdown-menu">
 						<li><a href="/GCTC/super-clusters/">SuperClusters</a></li>
-						<li><a href="/GCTC/smart-regions/">Smart Regions</a></li>						
+						<li><a href="/GCTC/smart-regions/">Smart Regions Collaborative</a></li>						
 					</ul>
                   </li>
                   
@@ -243,7 +243,7 @@ button.placeholder:hover {border-color:#ddd;outline:none;}
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>Smart Regions</h1>
+                <h1>Smart Regions Collaborative</h1>
             </div>
         </div>
     </div>
