--- a/event/gctc-expo-2017/exhibit/index.html
+++ b/event/gctc-expo-2017/exhibit/index.html
@@ -273,7 +273,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SuperClusters<span class="caret"></span></a>                    
 					<ul class="dropdown-menu">
 						<li><a href="/GCTC/super-clusters/">SuperClusters</a></li>
-						<li><a href="/GCTC/smart-regions/">Smart Regions</a></li>						
+						<li><a href="/GCTC/smart-regions/">Smart Regions Collaborative</a></li>						
 					</ul>
                   </li>
                   
