--- a/event/gctc-expo-2019/index.html
+++ b/event/gctc-expo-2019/index.html
@@ -55,7 +55,7 @@
 	#hero #date, #hero #location {display: inline-block;font-size:35px;font-family: 'Roboto Condensed', sans-serif;font-weight: 300;color:#fff;text-align:center;line-height: 1;text-shadow:2px 2px 0px rgba(0,0,0,1.0), -1px -1px 22px rgba(0,0,0,0.5);}
 	#hero .wrap {margin:20px auto;width:50%;text-align: center;padding-left: 35px;}
 	 	
-	#intro {background-color:#3E9FBA;color:#fff;padding:40px 0;background-image:none;}
+	#intro {background-color:#3E9FBA;color:#fff;padding-top:40px; padding-bottom:40px;background-image:none;}
 	
 	.no-gutter > [class*='col-'] {
 		padding-right:0;
@@ -64,11 +64,50 @@
 	
 	#cta { background: #C1B8AF;}
 	#cta .lead {font-family: 'Roboto Condensed', sans-serif;font-weight: 300;}
-	.customBtn {font-family: 'Roboto Condensed', sans-serif;font-weight: 700;font-size:74px;color:#fff;border-radius:2px;background:url(../../images/gctc-kickoff-2018/images/btn-icon.png) right center no-repeat #3E9FBA;padding:10px 120px 10px 40px;}	
+	.customBtn {font-family: 'Roboto Condensed', sans-serif;font-weight: 700;font-size:74px;color:#fff;border-radius:2px;background:url(../../images/gctc-kickoff-2018/images/btn-icon.png) right center no-repeat #3E9FBA;padding:10px 40px;}	
 		
-	#intro a {color:#fff;text-decoration:underline;}
+	#intro a {color:#fff;text-decoration:underline;word-break: break-all;}
 	#intro .container, #intro .row {height: auto; position: relative;}
 	#dcConvention:hover{opacity:0.8;}
+
+  .inlineBlock {
+	display:inline-block;
+	max-width: 140px;
+	padding: 10px;
+	border: 1px solid #ebebeb;
+	max-height: 140px;
+	overflow: hidden;
+	min-height: 140px;
+	vertical-align: middle;
+}
+.inlineBlock img {
+    vertical-align: middle;
+    max-height: 58px;
+}
+  #Logos {text-align: center;}
+#Logos a {
+    position: relative;    
+    height: 125px;
+    width: 100%;    
+    display: block;
+}
+#Logos img {
+    vertical-align: middle;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
+#Logos div[class*="col-"]{
+	float:none;
+	display:inline-block;
+}
+h3 {font-size: 180%;}
+@media (max-width: 480px) {
+  .customBtn{font-size:180%;text-align: center;padding:0.1em 1.3em;}
+}
 </style>
 </head>
 
@@ -144,7 +183,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SuperClusters<span class="caret"></span></a>                    
 					<ul class="dropdown-menu">
 						<li><a href="/GCTC/super-clusters/">SuperClusters</a></li>
-						<li><a href="/GCTC/smart-regions/">Smart Regions</a></li>						
+						<li><a href="/GCTC/smart-regions/">Smart Regions Collaborative</a></li>						
 					</ul>
                   </li>
                   
@@ -195,11 +234,14 @@
 
 </div>
 
-
-
-
-
 <div id="Expo2019" class="handlebars"><div class="loader">Loading...</div></div>
+<div class="container-fluid">
+  <div class="row">
+      <div id="Logos"></div>
+  </div>
+</div>
+<div id="Secondary"></div>
+
 <script id="cat-template" type="text/x-handlebars-template">
 <div class="container-fluid" id="hero" style="background-image:url(../../images/gctc-expo-2019/{{Background-Image}});">
 	<div class="row">
@@ -220,30 +262,46 @@
 		</div>
 	</div>
 </div>
-<div class="container-fluid" id="cta">
-	<div class="row no-gutter">
-		<div class="col-md-6">
-			<img src="../../images/gctc-expo-2019/{{Image}}" alt="{{Image-Alt-Text}}" class="img-responsive">
-		</div>
-		<div class="col-md-6" id="dcConvention">
-			<div style="cursor: pointer;background: #646469;overflow: hidden;padding: 20px 40px;color:#fff;">
-				<a href="{{Location-URL}}" target="_blank" style="text-decoration: none;color:#ffffff;">
-				<h2>{{Date}}</h2>
-				<p class="lead" style="margin-bottom: 0;padding-bottom:0;">
-					{{Location}}
-				</p>
-				<p style="margin: 0;padding:0;"><small>{{Address}}</small></p>
-				</a>
-			</div>
-			<div style="overflow: hidden;padding:10px 40px 40px 40px;color:#181818;">
-				<p><a class="customBtn" href="{{{CTA-URL}}}">{{CTA-Text}}</a></p>
-				<p>{{enhance Additional-Info}}</p>
-			</div>
-		</div>		
-	</div>
-</div>
-
 </script>
+
+<script id="logo-template" type="text/x-handlebars-template">
+      {{#if SectionHeading}}
+      <h3>{{SectionHeading}}</h3>
+      {{/if}}
+      {{#if Partners}}
+      <div class="col-xs-3 col-sm-2 col-md-2 col-lg-1"><a href="{{Partners-URL}}" target="_blank"><img src="images/{{Partners}}"></a></div>
+      {{/if}}
+	
+</script>
+
+<script id="secondary-template" type="text/x-handlebars-template">
+  <div class="container-fluid" id="cta">
+    <div class="row no-gutter">
+      <div class="col-md-6">
+        <img src="../../images/gctc-expo-2019/{{Image}}" alt="{{Image-Alt-Text}}" class="img-responsive">
+      </div>
+      <div class="col-md-6" id="dcConvention">
+        <div style="cursor: pointer;background: #646469;overflow: hidden;padding: 20px 40px;color:#fff;">
+          <a href="{{Location-URL}}" target="_blank" style="text-decoration: none;color:#ffffff;">
+          <h2>{{Date}}</h2>
+          <p class="lead" style="margin-bottom: 0;padding-bottom:0;">
+            {{Location}}
+          </p>
+          <p style="margin: 0;padding:0;"><small>{{Address}}</small></p>
+          </a>
+        </div>
+        <div style="overflow: hidden;padding:10px 40px 40px 40px;color:#181818;">
+          <p><a class="customBtn" href="{{{CTA-URL}}}">{{CTA-Text}}</a></p>
+          <p>{{enhance Additional-Info}}</p>
+        </div>
+      </div>		
+    </div>
+  </div>
+  </script>
+  
+
+
+
 <script type="text/javascript">
 //var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/1QZycMk96Dp2mSdexAQXeb-lvqCiEcwHL3SgKQK_Df6U/pubhtml';
 var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/1UwN30VBwYZELK6xF4mWiGDkX1O6Hs5qwgn1r_b6ZwQo/pubhtml';
@@ -252,9 +310,41 @@ var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/1UwN30VBwYZ
 $(document).ready( function() {
 	Tabletop.init( { key: public_spreadsheet_url,
 					 callback: showInfo,
-					 parseNumbers: true } );
+					 parseNumbers: true,
+           simpleSheet: false,
+           wanted:["Homepage","PartnerLogos"] } );
 	});
 
+  function showInfo(data, tabletop) {
+  var source   = $("#cat-template").html();
+  var template = Handlebars.compile(source);
+
+  var source2   = $("#logo-template").html();
+  var template2 = Handlebars.compile(source2);
+  
+  var source3   = $("#secondary-template").html();
+  var template3 = Handlebars.compile(source3);
+
+  $.each( tabletop.sheets("Homepage").all(), function(i, cat) {
+	  var html = template(cat);
+      $("#Expo2019").append(html);
+      $(".loader").hide();
+	});
+
+  $.each( tabletop.sheets("PartnerLogos").all(), function(i, cat) {
+    var html2 = template2(cat);
+    $("#Logos").append(html2);
+  });
+
+  $.each( tabletop.sheets("Homepage").all(), function(i, cat) {
+	  var html3 = template3(cat);
+      $("#Secondary").append(html3);      
+	});
+
+ 
+
+
+/*
 	function showInfo(data, tabletop) {
 	var source   = $("#cat-template").html();
 	var template = Handlebars.compile(source);
@@ -263,7 +353,7 @@ $(document).ready( function() {
 	  var html = template(cat);
       $("#Expo2019").append(html);
       $(".loader").hide();
-	});
+	});*/
 	
 	if(window.location.hash) {
 
