--- a/super-clusters/index.html
+++ b/super-clusters/index.html
@@ -160,7 +160,7 @@ button.placeholder:hover {border-color:#ddd;outline:none;}
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SuperClusters<span class="caret"></span></a>                    
 					<ul class="dropdown-menu">
 						<li><a href="/GCTC/super-clusters/">SuperClusters</a></li>
-						<li><a href="/GCTC/smart-regions/">Smart Regions</a></li>						
+						<li><a href="/GCTC/smart-regions/">Smart Regions Collaborative</a></li>						
 					</ul>
                   </li>
                   
