--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SuperClusters<span class="caret"></span></a>                    
 					<ul class="dropdown-menu">
 						<li><li><a href="super-clusters/">SuperClusters</a></li>
-						<li><a href="smart-regions/">Smart Regions</a></li></li>						
+						<li><a href="smart-regions/">Smart Regions Collaborative</a></li></li>						
 					</ul>
                   </li>
                   
