--- a/action-clusters-2018-2019/index.html
+++ b/action-clusters-2018-2019/index.html
@@ -7,7 +7,7 @@
   <meta name="googlebot" content="index,follow,snippet,archive">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Action Clusters 2018 - Global City Teams Challenge</title>
+  <title>Action Clusters 2018-2019 - Global City Teams Challenge</title>
 
   <meta name="author" content="" />
   <meta name="keywords" content="">
@@ -267,7 +267,7 @@
                    <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Action Clusters <span class="caret"></span></a>                    
                     <ul class="dropdown-menu">                                              
-						<li><a href="/GCTC/action-clusters-2018/">2018</a></li><li><a href="/GCTC/action-clusters-2017/">2017</a></li>                      
+						<li><a href="/GCTC/action-clusters-2018-2019/">2018-2019</a></li><li><a href="/GCTC/action-clusters-2017/">2017</a></li>                      
 						<li><a href="/GCTC/action-clusters-2016/">2016</a></li>
 						<li><a href="/GCTC/team-building-and-matchmaking/">Team Building &amp; Matchmaking</a></li>
                     </ul>                    
@@ -309,7 +309,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>Action Clusters 2018</h1>
+                <h1>Action Clusters 2018-2019</h1>
             </div>
         </div>
     </div>
