--- a/action-clusters-2018/index.html
+++ b/action-clusters-2018/index.html
@@ -2,22 +2,14 @@
 <html lang="en">
 
   <head>
-  <meta charset="utf-8">
-  <meta name="robots" content="all,follow">
-  <meta name="googlebot" content="index,follow,snippet,archive">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Action Clusters 2018-2019 - Global City Teams Challenge</title>
-  
-  <meta property="og:title" content="Global City Teams Challenge Action Clusters" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="/GCTC/action-clusters-2018/" />
-  <meta property="og:image" content="/GCTC/img/logo.png" />
-  <meta property="og:description" content="The Global City Teams Challenge (GCTC) program is a collaborative platform for the development of smart cities and communities, led by National Institute of Standards and Technology, a bureau of U.S. Department of Commerce, in partnership with other U.S. federal agencies including U.S. Department of Homeland Security Science and Technology Directorate (DHS S&T), National Science Foundation, International Trade Administration, and National Telecommunications and Information Administration. ">
+	<meta charset="utf8">
+	<meta http-equiv="refresh" content="0; url=../action-clusters-2018-2019/">
+	<link rel="canonical" href="../action-clusters-2018-2019/">
+	<title>This page has moved</title>  
 
 </head>
 <body>
-    
+    <p>This page has moved. Redirecting you to <a href="../action-clusters-2018-2019/">https://pages.nist.gov/GCTC/action-clusters-2018-2019/</a>&hellip;</p>
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
