--- a/event/gctc-expo-2019/agenda/index.html
+++ b/event/gctc-expo-2019/agenda/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
   <head>
+<meta http-equiv="refresh" content="0;url=/GCTC/uploads/2019/2019-GCTC-expo-Agenda.pdf" />
   <meta charset="utf-8">
   <meta name="robots" content="all,follow">
   <meta name="googlebot" content="index,follow,snippet,archive">
